# ChangeLog for dev-lang/nasm
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/nasm/ChangeLog,v 1.122 2015/02/05 03:47:07 mr_bones_ Exp $

  05 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> -nasm-2.10.07.ebuild:
  old

  01 Feb 2015; Agostino Sarubbo <ago@gentoo.org> nasm-2.11.06.ebuild:
  Stable for x86, wrt bug #538258

  31 Jan 2015; Agostino Sarubbo <ago@gentoo.org> nasm-2.11.06.ebuild:
  Stable for amd64, wrt bug #538258

  22 Jan 2015; Michael Sterrett <mr_bones_@gentoo.org> -nasm-2.11.05.ebuild:
  old

*nasm-2.11.06 (31 Dec 2014)

  31 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org> +nasm-2.11.06.ebuild:
  version bump (bug #533486)

  16 Jul 2014; Michael Sterrett <mr_bones_@gentoo.org> -nasm-2.10.09.ebuild:
  old

*nasm-2.11.05 (16 Jul 2014)

  16 Jul 2014; Michael Sterrett <mr_bones_@gentoo.org> +nasm-2.11.05.ebuild,
  -nasm-2.11.03.ebuild:
  version bump

*nasm-2.11.03 (06 May 2014)

  06 May 2014; Michael Sterrett <mr_bones_@gentoo.org> +nasm-2.11.03.ebuild,
  -nasm-2.10.05.ebuild, -nasm-2.11.02.ebuild, -nasm-2.11.ebuild:
  version bump; clean old

*nasm-2.11.02 (14 Apr 2014)

  14 Apr 2014; Michael Sterrett <mr_bones_@gentoo.org> +nasm-2.11.02.ebuild:
  version bump

  30 Jan 2014; Mike Frysinger <vapier@gentoo.org> nasm-2.11.ebuild:
  Drop -* as this package can run on any target (it is all C code).  It only
  generates for x86 systems.

*nasm-2.11 (17 Jan 2014)

  17 Jan 2014; Michael Sterrett <mr_bones_@gentoo.org> +nasm-2.11.ebuild:
  version bump

*nasm-2.10.09 (15 Dec 2013)

  15 Dec 2013; Michael Sterrett <mr_bones_@gentoo.org> +nasm-2.10.09.ebuild:
  version bump

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> nasm-2.10.07.ebuild:
  Stable for x86, wrt bug #457116

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> nasm-2.10.07.ebuild:
  Stable for amd64, wrt bug #457116

  22 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org> -nasm-2.10.01.ebuild:
  old
