@@ -1,4 +1,6 @@
 DIST nasm-2.11.06.tar.xz 763960 SHA256 90f60d95a15b8a54bf34d87b9be53da89ee3d6213ea739fb2305846f4585868a SHA512 909622940ca03c08668c73cd7d9a0cad48b5c4d76ecbd3c0111d91a4bc2c3a817dab11e13484bf8a48c33bf321e72597a7946735cb325f2a39570995b43baead WHIRLPOOL fc58c254d653c4a632325c6df85040cd8f9a2ac5b6dd68d86ee2d2b709dfca1248e440c5f1f92d87bc51485ca8ce12be3165ab76435f3c85421c6469d196e7d2
+DIST nasm-2.11.08.tar.xz 764872 SHA256 c99467c7072211c550d147640d8a1a0aa4d636d4d8cf849f3bf4317d900a1f7f SHA512 f7caf42d0fe1b850de13180a1f363e34a6d44a02696312dd8f12f4116ad1c1f3d01e6606c3a79fb881e76fc70d20894d85b333c84a75d60265ff9551f7b8cde4 WHIRLPOOL d13f342d59aedf2510347f847a2f5fb276a3bdb9e7b8c5cac6ac4e204a03ea31e477adc19facbf68f939245aae72971b232f1a0fc461ef554458f8956403c623
 EBUILD nasm-2.11.06.ebuild 941 SHA256 44aa3a97329e2737e1db1e586e463429ba009d20c78a4d249f26fb6fa1b3289a SHA512 71ea9df53f83ff58b3200743617c640fc75e7236abd418048608d27becb389a81c31dc215ebe1864c8dac8ba430b7e7e1f0d9e662e494d104bbd54a4c11fea34 WHIRLPOOL 3500f29618305348e3aacfff91fafb98e630f6f44718d6be05b45232b63286d4307044a4e2d70758ce6c0c312618278d3f20b1d237aec09f3827a9cce69bdfe8
-MISC ChangeLog 15842 SHA256 960530ade049d7f26759c51a8495f3789ca0d204d40d91fa6021e164b7525cab SHA512 e00c3eadce52724866cc4515abca6f4027195a90478d319ff7c80b2ccf471e34f404904ad2a054ffbee40afb31bac367dbb3403acb3debe50a3f04b2f3f72f38 WHIRLPOOL fb3647d06316aa60c582ec2781f9d7f23fa86ec970f5691e07a3c4596ac87729d8212fafa25214d6daef38a27f658707587013a2375919bff40b94c900f26872
+EBUILD nasm-2.11.08.ebuild 949 SHA256 77bcfe0a25278642736f53f6b6576cf099df744abab06a123d6821c6c5848ffa SHA512 91f45aa043428e83b4032644b4b55140f7df2fe1b5c91e7aa105ccf45bfb243ba2f62e8d3e16e05dee61348d5924098d74a0d9a3471281e6ab610274c72dbde3 WHIRLPOOL 60252c355130661005139fb3ddbe6228d6316531a30857219b42fbdcc3053367ca457815e6bc43c298fa086b43bee3697bb10e408bd9473c18331ef3f253d36b
+MISC ChangeLog 15964 SHA256 cc1be202831700665320e1868f59a3ca5dfd674cb2db08fdcc54259385ab1fa9 SHA512 5fbe1d3e80264cb21b8aa6dddcdbfed5a6abeed31b9fd7a228f7607bf6b32249d5a7a9dbd2cbf91089ddf99e774ce6397b7cae7159c82bf801a70de843df411e WHIRLPOOL 189a95a6fe7a7d577c28848209f4bc90bf7bf754332083bae39aeb9418927482ca615227e86eaf4ebd1b37526fd1be41686bef4ba72a7bc35c48153a060dcef7
 MISC metadata.xml 717 SHA256 9a51345c9db71eaeb3718651d3f322e3bd3667a5a3d8f18226f23a08cadded1b SHA512 53083a91bdc93a5c7e51944d4e2f47b4f9014b06134d3fd39cb399d7f26762a9f926156aa22f5b1dfec769b27e5cef5ed1f1c770678e0bfd2246981bb622c6d1 WHIRLPOOL fa7f2120edcb8a46fcfab92bff384f8a44f63f023f88584058b2af8ae27a205724e68661d08c328149efb6923971352a2cc4286dbf95106bda198e764c04ef87
