@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/nasm
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/nasm/ChangeLog,v 1.122 2015/02/05 03:47:07 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/nasm/ChangeLog,v 1.123 2015/04/22 16:04:34 mr_bones_ Exp $
+
+*nasm-2.11.08 (22 Apr 2015)
+
+  22 Apr 2015; Michael Sterrett <mr_bones_@gentoo.org> +nasm-2.11.08.ebuild:
+  version bump
 
   05 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> -nasm-2.10.07.ebuild:
   old
